--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,13 @@ language: julia
 os:
   - linux
   - osx
+  - windows
 julia:
   - 1.0
   - nightly
+codecov: true
 notifications:
   email: false
-after_success:
-  - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
 jobs:
   allow_failures:
     - julia: nightly
