--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,10 @@ uuid = "e9bf6461-d004-4b32-878f-fe25c44bfa3e"
 authors = ["Benoit Pasquier <briochemc@gmail.com>"]
 version = "0.1.0"
 
+[deps]
+DataDeps = "124859b0-ceae-595e-8997-d05f6a7a8dfe"
+NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
+
 [compat]
 julia = "1"
 
