--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,8 @@ NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
 
 [compat]
 julia = "1"
+DataDeps = "0.7"
+NCDatasets = "0.10"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
