--- a/Project.toml
+++ b/Project.toml
@@ -8,9 +8,9 @@ DataDeps = "124859b0-ceae-595e-8997-d05f6a7a8dfe"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
 
 [compat]
-julia = "1"
 DataDeps = "0.7"
-NCDatasets = "0.9, 0.10"
+NCDatasets = "0.9, 0.10, 0.12"
+julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
