--- a/Project.toml
+++ b/Project.toml
@@ -9,7 +9,7 @@ NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
 
 [compat]
 DataDeps = "0.7"
-NCDatasets = "0.9, 0.10, 0.12"
+NCDatasets = "0.9, 0.10, 0.11, 0.12"
 julia = "1"
 
 [extras]
